fix: enemy start angle, enemy door opening